@@ -56,6 +56,7 @@ SimGrid (3.6) unstable; urgency=low
    http://lists.gforge.inria.fr/pipermail/simgrid-user/2010-December/002206.html
  * Add new logging macros, with variable number of arguments. Define
    XBT_USE_DEPRECATED if you want to use the old macros INFO1, INFO2, etc.
+ * Change xbt_die() to accept a format string with arguments, just like printf.
 
  INSTR
  * New configuration options
